objects/Account.object
<CustomObject>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field that calculates the days since the Last Activity Date</inlineHelpText>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <description>Create a link using Google Maps</description>
        <formula>&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=&quot; &amp;
IF(NOT(ISNULL(BillingStreet)), BillingStreet &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCity)), BillingCity &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingState)), BillingState &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCountry)), BillingCountry &amp; &quot;,&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Custom field to segment Accounts by Region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Indicator__c</fullName>
        <formula>IMAGE(CASE( Satisfaction_Level__c,&quot;Very Satisfied&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;Satisfied&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;Not Very Satisfied&quot;, &quot;/img/samples/stars_100.gif&quot;,&quot;/img/samples/stars_100.gif&quot;),&quot;No Satisfaction Level&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field based on satisfaction level</inlineHelpText>
        <label>Satisfaction Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Level__c</fullName>
        <inlineHelpText>Custom field to segment accounts by satisfaction level</inlineHelpText>
        <label>Satisfaction Level</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Won_Opportunities__c</fullName>
        <inlineHelpText>An example Rollup Summary field that adds all of the account&apos;s won opportunities.</inlineHelpText>
        <label>Total Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>